修改了过滤器，现在可以从application找到对应的bean了

--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -109,3 +109,8 @@ security:
       - "/**" # 暂时先这么写
     double-verify:
       - "/voucher-order/seckill/{id}"
+rule:
+  type:
+    skip: skip
+    jwt-token: verifyJwtExistInRedis
+    jwt-and-redis: verifyJwtExistInRedis
