修改了路由策略，现在只需要修改application文件，和新增一个策略类

--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -92,25 +92,21 @@ jwt:
 
 security:
   jwt:
-    skip-path:
-      - "/user/code"
-      - "/user/login"
-      - "/shop/**"
-      - "/shop-type/**"
-      - "/upload/**"
-      - "/voucher/**"
-      - "/blog/hot"
-      - "/user/register"
-      - "/blog/likes/{id}"
-    single-verify:
-      - "/blog/like/**"
-      - "/voucher/list/{shopId}"
-      - "/blog/of/me"
-      - "/**" # 暂时先这么写
-    double-verify:
-      - "/voucher-order/seckill/{id}"
-rule:
-  type:
-    skip: skip
-    jwt-token: verifyJwtExistInRedis
-    jwt-and-redis: verifyJwtExistInRedis
+    strategies:
+      - paths:
+        - /user/code
+        - /user/login
+        - /shop/**
+        - /shop-type/**
+        - /upload/**
+        - /voucher/**
+        - /blog/hot
+        - /user/register
+        - /blog/likes/{id}
+        strategy: skip
+      - paths:
+          - /blog/like/**
+          - /voucher/list/{shopId}
+          - /blog/of/me
+          - /** # 暂时先这么写
+        strategy: verifyJwtExistInRedis
