依旧修改了一些小问题

--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -103,6 +103,7 @@ security:
         - /user/code
         - /user/login
         - /user/register
+        - /user/reset
         - /shop/{id}
         - /shop-type/**
         - /voucher/list/{shopId}
